fix: Fix ugly custom scrollbar 🤮

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -24,3 +24,7 @@
     /* Optional: Center the crop */
     display: block;
 }
+
+::-webkit-scrollbar {
+    background: var(--theme);
+}
